1. fix footer's resize problem and menu's separation into two lines on resize problem 2. add user role on menu (visible after authentication)

--- a/FinalProject_LikeIT/src/main/webapp/resources/css/main.css
+++ b/FinalProject_LikeIT/src/main/webapp/resources/css/main.css
@@ -102,6 +102,20 @@ footer:hover {
     }
 }
 
+@media screen and (max-width: 400px) {
+    .right-side-footer {
+        float: none;
+    }
+
+    .left-side-footer {
+        float: none;
+    }
+
+    footer {
+        height: 50px;
+    }
+}
+
 .form-main-title {
     color: #d35400;
     font-size: 18px;
@@ -123,4 +137,112 @@ footer:hover {
 .btn-custom:hover,
 .btn-custom:focus {
     color: #fff;
+}
+
+.role {
+    font-weight: bold;
+    text-transform: lowercase;
+    color: #1D5E9E;
+    text-shadow: 2px 1px 4px white, 0 0 1em white;
+}
+
+@media (max-width: 1100px) {
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    }
+
+    .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+        border-color: #e7e7e7;
+    }
+
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+
+    .navbar-collapse.in {
+        overflow-y: visible !important;
+        overflow-x: hidden !important;
+    }
+
+    .navbar-nav {
+        float: none !important;
+        /*margin: 0;*/
+    }
+
+    .navbar-nav > li {
+        float: none;
+    }
+
+    .navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+
+    .navbar-form {
+        padding: 10px 15px;
+        margin-top: 8px;
+        margin-right: -15px;
+        margin-bottom: 8px;
+        margin-left: -15px;
+        border-top: 1px solid transparent;
+        border-bottom: 1px solid transparent;
+        -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
+    }
+
+    .container-fluid > .navbar-collapse, .container-fluid > .navbar-header, .container > .navbar-collapse, .container > .navbar-header {
+        margin-right: -15px;
+        margin-left: -15px;
+    }
+
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+
+    .collapsing {
+        overflow: hidden !important;
+    }
+
+    .navbar-form .form-control {
+        display: block;
+        width: 100%;
+    }
+
+    .navbar-form .form-group {
+        display: inline-block;
+        margin-bottom: 0;
+        vertical-align: middle;
+        width: 100%;
+    }
+
+    .navbar-left {
+        float: none !important;
+    }
+}
+
+.top-padding {
+    padding-top: 1%;
+}
+
+.bottom-padding {
+    padding-bottom: 1%;
+}
+
+.right {
+    float: right;
 }
